--- a/layouts/partials/paige/menu.html
+++ b/layouts/partials/paige/menu.html
@@ -1,27 +1,43 @@
 {{ $p := . }}
 {{ $basePath := path.Clean (urls.Parse .Site.BaseURL).Path }}
 {{ if eq $basePath "/" }}
-{{ $basePath = "" }}
+    {{ $basePath = "" }}
 {{ end }}
 {{ $links := false }}
 {{ $pills := false }}
 {{ $tabs := false }}
 {{ with .Site.Params.paige.menu_style }}
-{{ if eq . `links` }}
-{{ $links = true }}
-{{ else if eq . `tabs` }}
-{{ $tabs = true }}
+    {{ if eq . `links` }}
+        {{ $links = true }}
+    {{ else if eq . `tabs` }}
+        {{ $tabs = true }}
+    {{ else }}
+        {{ $pills = true }}
+    {{ end }}
 {{ else }}
-{{ $pills = true }}
+    {{ $pills = true }}
 {{ end }}
-{{ else }}
-{{ $pills = true }}
-{{ end }}
-<nav class="justify-content-center my-3 nav{{ if $pills }} nav-pills{{ else if $tabs }} nav-tabs{{ end }}">
+<nav class="justify-content-center my-3 nav {{ if $pills }} nav-pills {{ else if $tabs }} nav-tabs {{ end }}">
     {{ range .Site.Menus.main }}
-    {{ $pagePath := strings.TrimPrefix $basePath $p.RelPermalink }}
-    {{ $menuPath := strings.TrimPrefix $basePath .URL }}
-    {{ $active := or (and (eq $menuPath `/`) (eq $pagePath `/`)) (and (ne $menuPath `/`) (hasPrefix $pagePath $menuPath)) }}
-    <a href="{{ .URL }}" class="{{ if $active }}active {{ if $links }}link-secondary {{ end }}{{ end }}nav-link"{{ if $active }} aria-current="page"{{ end }}>{{ .Name }}</a>
+        {{ if .HasChildren }}
+            <div class="dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{ .Name }}
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {{ range .Children }}
+                        {{ $pagePath := strings.TrimPrefix $basePath $p.RelPermalink }}
+                        {{ $menuPath := strings.TrimPrefix $basePath .URL }}
+                        {{ $active := or (and (eq $menuPath `/`) (eq $pagePath `/`)) (and (ne $menuPath `/`) (hasPrefix $pagePath $menuPath)) }}
+                        <li><a class="dropdown-item {{ if $active }} active {{ if $links }} link-secondary {{ end }} {{ end }}" href="{{ .URL }}" {{ if $active }} aria-current="page" {{ end }}>{{ .Name }}</a></li>
+                    {{ end }}
+                </ul>
+            </div>
+        {{ else }}
+            {{ $pagePath := strings.TrimPrefix $basePath $p.RelPermalink }}
+            {{ $menuPath := strings.TrimPrefix $basePath .URL }}
+            {{ $active := or (and (eq $menuPath `/`) (eq $pagePath `/`)) (and (ne $menuPath `/`) (hasPrefix $pagePath $menuPath)) }}
+            <a href="{{ .URL }}" class="{{ if $active }} active {{ if $links }} link-secondary {{ end }} {{ end }} nav-link" {{ if $active }} aria-current="page" {{ end }}>{{ .Name }}</a>
+        {{ end }}
     {{ end }}
 </nav>
