♻ Modify title display

--- a/layouts/partials/paige/title.html
+++ b/layouts/partials/paige/title.html
@@ -1,8 +1,4 @@
 {{ if .Title }}
-{{ $class := "display-5" }}
-{{ if .IsHome }}
-{{ $class = "display-1" }}
-{{ end }}
 {{ $title := .Title | markdownify }}
-<h1 class="{{ $class }} fw-bold text-center">{{ if .Params.link }}<a href="{{ .Params.link }}">{{ $title }}</a>{{ else }}{{ $title }}{{ end }}{{ if .Scratch.Get "paige_show_full_pages" }}<a class="paige-header-link" href="{{ .RelPermalink }}">#</a>{{ end }}</h1>
+<h1 class="display-6 fw-bold text-center {{- if .Draft }} draft {{- end -}} {{- if gt .PublishDate now }} future {{- end -}} {{- if and .ExpiryDate (lt .ExpiryDate now) }} expired {{- end -}}">{{ if .Params.link }}<a href="{{ .Params.link }}">{{ $title }}</a>{{ else }}{{ $title }}{{ end }}{{ if .Scratch.Get "paige_show_full_pages" }}<a aria-label="Link to this section" class="paige-header-link" href="{{ .RelPermalink }}">#</a>{{ end }}</h1>
 {{ end }}
